--- a/index.html
+++ b/index.html
@@ -716,8 +716,8 @@
 					<div class="contact_thumb_2">
 						<h3>Социальные сети</h3>
 						<ul class="soc_list_2">
-							<li><a href="#"><img src="img/vk_2.svg" alt="" /></a></li>
-							<li><a href="#"><img src="img/wp_2.svg" alt="" /></a></li>
+							<li><a href="#"><img src="img/vk.svg" alt="" /></a></li>
+							<li><a href="#"><img src="img/wp2.svg" alt="" /></a></li>
 						</ul>
 					</div>
 				</div>
